clean-up scanner.h scanner.c, updated make, added al.c

--- a/lexical_analyzer/makefile
+++ b/lexical_analyzer/makefile
@@ -1,26 +1,7 @@
-# Compiler
-CC = gcc
+all:
+	flex scanner.l
+	gcc -o scanner scanner.c al.c
 
-# Flex
-FLEX = flex
-
-# Executable name
-EXEC = scanner.exe
-
-# Source files
-SRC = scanner.l
-OBJ = lex.alpha_yy.c
-
-# Rule to generate lex.yy.c from scanner.l
-$(OBJ): $(SRC)
-	$(FLEX) $(SRC)
-
-# Rule to compile the program
-$(EXEC): $(OBJ)
-	$(CC) -o $(EXEC) $(OBJ)
-
-all: $(EXEC)
-
-# Clean
 clean:
-	del -f $(EXEC) $(OBJ)
+	rm -f scanner.c scanner
+
