--- a/lexical_analyzer/makefile
+++ b/lexical_analyzer/makefile
@@ -1,7 +1,7 @@
 all:
 	flex scanner.l
-	gcc -o al scanner.c al.c
+	g++ -std=c++11 -o al scanner.cpp al.cpp
 
 clean:
-	rm -f  scanner.c al
+	rm -f  scanner.cpp al.exe
 
