no conflicts ? have to make lists
Co-authored-by: manolio2001 <manolio2001@users.noreply.github.com>
Co-authored-by: katerinakape <katerinakape@users.noreply.github.com>

--- a/syntax_analyzer/Makefile
+++ b/syntax_analyzer/Makefile
@@ -1,5 +1,5 @@
 all:
-	bison --yacc --defines --output=parser.cpp parser.y
+	bison --yacc --defines -v --output=parser.cpp parser.y
 
 clean:
 	del -f parser.cpp parser.hpp
