--- a/syntax_analyzer/Makefile
+++ b/syntax_analyzer/Makefile
@@ -1,5 +1,11 @@
+ifeq ($(OS),Windows_NT)
+    RM = del -f
+else
+    RM = rm -f
+endif
+
 all:
 	bison --yacc --defines -v --output=parser.cpp parser.y
 
 clean:
-	del -f parser.cpp parser.hpp
+	$(RM) parser.cpp parser.hpp parser.output
